@@ -3,6 +3,7 @@ MySQL: Fix saving bit(64) values (bug #839)
 PostgreSQL: Preserve whitespace in EXPLAIN (bug #827)
 PostgreSQL: Support SSL
 SQLite: Fix altering forign keys (bug #841)
+SQLite: Fix expressions in default values (bug #860)
 MS SQL: Foreign keys in non-default schema (bug #833)
 Oracle: Include tables granted by other user
 MongoDB: Execute commands against the selected DB
